k8s/apps/media/arr/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: arr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: prowlarr
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        topology.kubernetes.io/zone: hsp-proxmox0
      securityContext:
        runAsNonRoot: true
        runAsUser: 2501
        runAsGroup: 2501
        fsGroup: 2501
        fsGroupChangePolicy: OnRootMismatch
        seccompProfile:
          type: RuntimeDefault
      dnsConfig:
        options:
          # Lower ndots to avoid search-domain expansion issues (musl/glibc resolver short-circuit)
          # and ensure external and cluster FQDNs resolve correctly.
          # Use this on other Alpine based containers if I face similar issues.
          - name: ndots
            value: "1"
      containers:
        - name: prowlarr
          image: ghcr.io/home-operations/prowlarr:2.5.2@sha256:dbe7685eb134cd63eaa130fbf60060f33f26d7482b5fc5a81da9fca8552aa4ed # renovate: datasource=docker depName=ghcr.io/home-operations/prowlarr packageName=ghcr.io/home-operations/prowlarr versioning=docker registryUrl=https://ghcr.io
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
            - name: tmp
              mountPath: /tmp
          resources:
            requests:
              cpu: 50m
              memory: 192Mi
            limits:
              cpu: 1000m
              memory: 256Mi
      volumes:
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config
        - name: tmp
          emptyDir: {}
